--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@types/crypto-js": "^4.1.1",
+    "crypto-js": "^4.1.1",
     "less": "^4.1.3",
     "vant": "^3.5.3",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-jsonp": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.45",
